--- a/pipeline.yml
+++ b/pipeline.yml
@@ -22,35 +22,35 @@ jobs:
       CONFIG_DIR: ./config
       CLIENT_SECRET: {{client_secret}}
       CF_MGMT_COMMAND: create-orgs
-# - name: create-spaces
-#   plan:
-#   - get: config-repo
-#     passed: [create-orgs]
-#     trigger: true
-#   - task: create-spaces
-#     file: config-repo/ci/tasks/cf-mgmt.yml
-#     params:
-#       SYSTEM_DOMAIN: {{system_domain}}
-#       USER_ID: {{user_id}}
-#       PASSWORD: {{password}}
-#       CONFIG_DIR: ./config
-#       CLIENT_SECRET: {{client_secret}}
-#       LDAP_PASSWORD: {{ldap_password}}
-#       CF_MGMT_COMMAND: create-spaces
-# - name: update-spaces
-#   plan:
-#   - get: config-repo
-#     passed: [create-spaces]
-#     trigger: true
-#   - task: update-spaces
-#     file: config-repo/ci/tasks/cf-mgmt.yml
-#     params:
-#       SYSTEM_DOMAIN: {{system_domain}}
-#       USER_ID: {{user_id}}
-#       PASSWORD: {{password}}
-#       CONFIG_DIR: ./config
-#       CLIENT_SECRET: {{client_secret}}
-#       CF_MGMT_COMMAND: update-spaces
+- name: create-spaces
+  plan:
+  - get: config-repo
+    passed: [create-orgs]
+    trigger: true
+  - task: create-spaces
+    file: config-repo/ci/tasks/cf-mgmt.yml
+    params:
+      SYSTEM_DOMAIN: {{system_domain}}
+      USER_ID: {{user_id}}
+      PASSWORD: {{password}}
+      CONFIG_DIR: ./config
+      CLIENT_SECRET: {{client_secret}}
+      LDAP_PASSWORD: {{ldap_password}}
+      CF_MGMT_COMMAND: create-spaces
+- name: update-spaces
+  plan:
+  - get: config-repo
+    passed: [create-spaces]
+    trigger: true
+  - task: update-spaces
+    file: config-repo/ci/tasks/cf-mgmt.yml
+    params:
+      SYSTEM_DOMAIN: {{system_domain}}
+      USER_ID: {{user_id}}
+      PASSWORD: {{password}}
+      CONFIG_DIR: ./config
+      CLIENT_SECRET: {{client_secret}}
+      CF_MGMT_COMMAND: update-spaces
 # - name: update-space-users
 #   plan:
 #   - get: config-repo
