--- a/pipeline.yml
+++ b/pipeline.yml
@@ -68,34 +68,34 @@ jobs:
 #       CLIENT_SECRET: {{client_secret}}
 #       LDAP_PASSWORD: {{ldap_password}}
 #       CF_MGMT_COMMAND: update-space-users
-# - name: update-space-quotas
-#   plan:
-#   - get: config-repo
-#     passed: [create-spaces]
-#     trigger: true
-#   - task: update-space-quotas
-#     file: config-repo/ci/tasks/cf-mgmt.yml
-#     params:
-#       SYSTEM_DOMAIN: {{system_domain}}
-#       USER_ID: {{user_id}}
-#       PASSWORD: {{password}}
-#       CONFIG_DIR: ./config
-#       CLIENT_SECRET: {{client_secret}}
-#       CF_MGMT_COMMAND: update-space-quotas
-# - name: update-space-security-groups
-#   plan:
-#   - get: config-repo
-#     passed: [create-spaces]
-#     trigger: true
-#   - task: update-space-security-groups
-#     file: config-repo/ci/tasks/cf-mgmt.yml
-#     params:
-#       SYSTEM_DOMAIN: {{system_domain}}
-#       USER_ID: {{user_id}}
-#       PASSWORD: {{password}}
-#       CONFIG_DIR: ./config
-#       CLIENT_SECRET: {{client_secret}}
-#       CF_MGMT_COMMAND: update-space-security-groups
+- name: update-space-quotas
+  plan:
+  - get: config-repo
+    passed: [create-spaces]
+    trigger: true
+  - task: update-space-quotas
+    file: config-repo/ci/tasks/cf-mgmt.yml
+    params:
+      SYSTEM_DOMAIN: {{system_domain}}
+      USER_ID: {{user_id}}
+      PASSWORD: {{password}}
+      CONFIG_DIR: ./config
+      CLIENT_SECRET: {{client_secret}}
+      CF_MGMT_COMMAND: update-space-quotas
+- name: update-space-security-groups
+  plan:
+  - get: config-repo
+    passed: [create-spaces]
+    trigger: true
+  - task: update-space-security-groups
+    file: config-repo/ci/tasks/cf-mgmt.yml
+    params:
+      SYSTEM_DOMAIN: {{system_domain}}
+      USER_ID: {{user_id}}
+      PASSWORD: {{password}}
+      CONFIG_DIR: ./config
+      CLIENT_SECRET: {{client_secret}}
+      CF_MGMT_COMMAND: update-space-security-groups
 # - name: update-org-users
 #   plan:
 #   - get: config-repo
@@ -113,17 +113,17 @@ jobs:
 #       CLIENT_SECRET: {{client_secret}}
 #       LDAP_PASSWORD: {{ldap_password}}
 #       CF_MGMT_COMMAND: update-org-users
-# - name: update-org-quotas
-#   plan:
-#   - get: config-repo
-#     passed: [create-orgs]
-#     trigger: true
-#   - task: update-org-quotas
-#     file: config-repo/ci/tasks/cf-mgmt.yml
-#     params:
-#       SYSTEM_DOMAIN: {{system_domain}}
-#       USER_ID: {{user_id}}
-#       PASSWORD: {{password}}
-#       CONFIG_DIR: ./config
-#       CLIENT_SECRET: {{client_secret}}
-#       CF_MGMT_COMMAND: update-org-quotas
+- name: update-org-quotas
+  plan:
+  - get: config-repo
+    passed: [create-orgs]
+    trigger: true
+  - task: update-org-quotas
+    file: config-repo/ci/tasks/cf-mgmt.yml
+    params:
+      SYSTEM_DOMAIN: {{system_domain}}
+      USER_ID: {{user_id}}
+      PASSWORD: {{password}}
+      CONFIG_DIR: ./config
+      CLIENT_SECRET: {{client_secret}}
+      CF_MGMT_COMMAND: update-org-quotas
